syntax = "proto3";

package stock;

service StockService {
  rpc GetStockUpdates(StockRequest) returns (stream StockPrice);
}

message StockRequest {
  string symbol = 1;
}

message StockPrice {
  string symbol = 1;
  float price = 2;
  string timestamp = 3;
}
